<resources>
    <string name="app_name">Shuttler</string>
    <string name="title_activity_tracker">Shuttle Status</string>
    <string name="login_as_driver">Welcome to Shuttler! Login as a driver</string>
    <string name="miss_shuttle">Don\'t Miss The Shuttle Anymore!</string>
    <string name="login_content_description">Shuttler icon</string>
    <string name="hint_username">Username</string>
    <string name="hint_username_email">Plattsburgh Username / Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_register">Register</string>
    <string name="btn_to_register">First time using Shuttler? <font color="#F2014B">Register here</font></string>
    <string name="enable_notification_title">Enable notifications</string>
    <string name="enable_notification_description">Enable this option if you would like to receive notification from the Shuttler</string>

    <string name="notify_me_title">Notify me when the shuttle is at</string>
    <string name="notify_me_description">In which stop would you like to notified?</string>

    <string name="time_ahead_title">Time ahead</string>
    <string name="time_ahead_description">In which stop would you like to be notified?</string>

    <string name="maps_menu_settings">Settings</string>
    <string-array name="locations_array">
        <item>Walmart</item>
        <item>Target</item>
        <item>Market32</item>
        <item>Jade</item>
        <item>Campus</item>
    </string-array>
    <string name="authenticate">Confirmation email</string>
    <string name="edit_email">Edit email</string>
    <string name="logout_button_text_settings">Logout</string>
    <string name="apply_button_settings">APPLY</string>
    <string name="cancel_button_settings">Cancel</string>
    <string name="on_duty_string">Dear driver, please turn on if you are on duty. Don\'t forget to turn off once you are out of duty </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="btn_to_login">Already registered? <font color="#F2014B">Sign-in here</font></string>
    <string name="off_hours"><font color="#F2014B">OOPS!</font> The shuttle is not working right now. The Working hours are Sunday to Thursday from 11 am to 10 pm and Friday and Saturday from 10am to 12pm</string>
    <string name="title_activity_driver">Map</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_shuttle">Shuttle</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="coding_hub">Developed with ❤ by <a href="https://coding-hub.com">Coding Hub</a></string>
    <string name="no_notifications">No Notifications</string>

    <string name="track_fragment">Shuttle Status</string>
    <string name="settings_fragment">Settings</string>
    <string name="notifications_fragment">Notifications</string>
    <string name="btn_forgot_password">Forgot password? <font color="#F2014B">Reset</font></string>
    <string name="forgot_password_description">We will send you an email with a password reset link. Please enter your username.</string>
    <string name="send_link">Email Link</string>
    <string name="forgot_password_title">Forgot \nPassword</string>

</resources>
